# pico-webserver

./: .gitignore  Cargo.toml  STEPS.md
.cargo/: config.toml
src/: main.rs
