[package]
name = "pico-webserver"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cyw43 = "0.7.0"
cyw43-pio = "0.10.0"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-riscv32"] }
embassy-net = { version = "0.9.1", features = ["dhcpv4", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-rp = { version = "0.10.0", default-features = false, features = ["critical-section-impl", "rp235xa", "time-driver", "unstable-pac"] }
embassy-time = "0.5.1"
embedded-io-async = "0.7.0"
panic-halt = "0.2.0"
riscv = "0.11"
riscv-rt = "0.12.2"
static_cell = "2.1.1"

[patch.crates-io]
cyw43 = { path = "vendor/cyw43" }
cyw43-pio = { path = "vendor/cyw43-pio" }
embassy-hal-internal = { path = "vendor/embassy-hal-internal" }
embassy-rp = { path = "vendor/embassy-rp" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

[profile.release]
debug = 2
debug-assertions = false
lto = "fat"
opt-level = 2
overflow-checks = false
